--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 :root {
     --background-color:#3A606E;
-    --heading-color:#E0E0E0;
-    --main-color:#607B7D
+    --heading-color:#AAAE8E;
+    --main-color:#607B7D;
+    --text-color:#E0E0E0;
 }
 
 body{
@@ -15,7 +16,7 @@ header{
     padding:2%;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1, h2, h3, h4, h5, h6 {
     color:var(--heading-color);
 }
 
@@ -62,11 +63,10 @@ nav a{
 }
 
 nav a:hover{
-    background-color:blue;
+    background-color:var(--main-color);
 }
 
 body {
-    border: 1px solid black
 }
 
 main {
@@ -75,50 +75,83 @@ main {
 }
 
 
-.work{
+/* .work{
     width:200px;
     height:100px;
     display:relative;
     margin:1%;
-}
-
-.project img {
-    height:auto;
-    width:auto;
-}
+} */
 
 section {
     background-color:var(--main-color);
     display:flex;
+    justify-content: center;
     /* height:100px; */
     margin:10px;
-    border: 1px solid black
+    /* border: 1px solid black */
 }
 
 .left {
     float:left;
-    width:30%;
-    border-right:5px solid black;
-    height:100%;
-    text-align:right;
-    border: 1px solid black
+    width:20%;
+    border-right:5px solid var(--heading-color);
+    height:inherit;
 }
 
 .right {
-    /* display: flex; */
     float:right;
-    width:70%;
-    height:10%;
-    border: 1px solid black
+    width:80%;
+    /* border: 1px solid black */
 }
 
-.right img {
+.right>img {
     position:relative;
-    left:50px;
+    /* left:50px; */
     width:150px;
     height:auto;
     border-radius: 100%;
-    border: 1px solid black
+    /* border: 1px solid black; */
+}
+
+.project{
+    display:inline-block;
+    /* float:left; */
+    padding:1%;
+    border: 1px solid black;
+
+}
+
+.project img {
+    /* position:relative; */
+    /* left:50px; */
+    width:150px;
+    height:auto;
+}
+
+.project img:hover{
+    opacity:.5;
+}
+
+.first-project{
+    display:flex;
+    justify-content: center;
+    /* float:center; */
+    padding:1%;
+    border:1px solid black;
+}
+
+.first-project img {
+    /* position:relative; */
+    width:250px;
+    /* height:auto; */
+}
+
+.right h2{
+    
+}
+
+p{
+    color:var(--text-color);
 }
 
 .right p {
