--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,49 +9,38 @@ body{
     background-color:var(--background-color);
 }
 
-header{
-    /* display:flex; */
-    /* justify-content: space-between; */
-    border: 1px solid black;
+header,footer{
+    display:inline;
+    text-align: center;
     padding:2%;
 }
 
 h1, h2, h3, h4, h5, h6 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color:var(--heading-color);
 }
 
 header h1  {
-    font-size:larger;
+    font-size:64px;
 }
 
+.left h2 {
+    display:flex;
+    /* border-top:5px solid var(--heading-color);se */
+    justify-content: flex-end;
+    font-size:36px;
+    font-weight: 300;
+}
+
+
+/* Navigation Stuff */
 nav {
-    /* border: 1px solid black */
-}
-
-
-/* nav ul {
-   display: flex;
-   align-items: center;
-   border: 1px solid black;
-}
-
-nav li{
-    border: 1px solid black;
-    padding: 14px 20px;
-} */
-
-nav ul {
-    position:fixed;
+    /* border: 1px solid black; */
+    display:flex;
+    position:absolute;
     top:1px;
     right:5px;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    /* overflow: hidden; */
-}
-
-nav li {
-    float:left;
 }
 
 nav a{
@@ -66,97 +55,103 @@ nav a:hover{
     background-color:var(--main-color);
 }
 
+
 body {
+    font-family:sans-serif;
 }
 
 main {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color:var(--main-color)
 }
-
-
-/* .work{
-    width:200px;
-    height:100px;
-    display:relative;
-    margin:1%;
-} */
 
 section {
     background-color:var(--main-color);
     display:flex;
-    justify-content: center;
-    /* height:100px; */
-    margin:10px;
+    /* justify-content: center; */  
+    margin:2%;
     /* border: 1px solid black */
 }
 
 .left {
-    float:left;
+    /* float:left; */
     width:20%;
     border-right:5px solid var(--heading-color);
     height:inherit;
 }
 
 .right {
-    float:right;
     width:80%;
-    /* border: 1px solid black */
+    /* border: 1px solid red */
 }
 
 .right>img {
-    position:relative;
-    /* left:50px; */
-    width:150px;
+    position:absolute;
+    width:8%;
     height:auto;
-    border-radius: 100%;
+    border-radius: 50%;
+    left:25%;
+    top:1%
     /* border: 1px solid black; */
 }
 
+article{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height:200px;
+}
+
+.first-project{
+    display:flex;
+    flex-wrap: wrap;
+    /* border: 4px solid red; */
+    justify-content: center;
+}
+
+.first-project img {
+    width:100%;
+    max-width: 850px;
+    height:auto;
+}
+
+.first-project img:hover{
+    opacity: .5;
+}
+
 .project{
-    display:inline-block;
-    /* float:left; */
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     padding:1%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 
 }
 
 .project img {
-    /* position:relative; */
-    /* left:50px; */
-    width:150px;
-    height:auto;
+    width:auto;
+    height:250px;
+    padding:1%;
 }
+
+
+/* .project img:first-child {
+    max-width:100;
+    height:auto;
+} */
 
 .project img:hover{
     opacity:.5;
 }
 
-.first-project{
-    display:flex;
-    justify-content: center;
-    /* float:center; */
-    padding:1%;
-    border:1px solid black;
-}
-
-.first-project img {
-    /* position:relative; */
-    width:250px;
-    /* height:auto; */
-}
-
-.right h2{
-    
-}
-
-p{
+p {
     color:var(--text-color);
 }
 
 .right p {
-    position:relative;
-    left:50px;
+    width:80%;
+    font-weight: 200;
+    /* border:1px solid yellow; */
 }
 
 /* 
@@ -164,3 +159,5 @@ p{
 li a {
   display: block;
 */
+
+@media screen ()
