LOTS of changes - redid css to be mobile-first

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,157 +1,177 @@
 :root {
-    --background-color:#3A606E;
-    --heading-color:#AAAE8E;
-    --main-color:#607B7D;
-    --text-color:#E0E0E0;
+    --background-color:#111213ff;
+    --heading-color:#7c8eca;
+    --main-color:#333;
+    --text-color:#bdbaba;
 }
 
+/* SMOOTH SCROLL OH YEAH */
+html {
+    scroll-behavior: smooth;
+  }
+
 body{
+    /* fit content to screen */
+    min-width: fit-content;
     background-color:var(--background-color);
+    font-size:16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* border:2px solid yellow; */
 }
 
 header,footer{
-    display:inline;
-    text-align: center;
-    padding:2%;
+    display:block;
+    margin:3em;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+h1, h2, h3, h5, h6 {
     color:var(--heading-color);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
+h4{
+    color:var(--text-color);
+    font-weight:100;
+    font-size: small;
+}
+
+/* media query this to center or even left */
 header h1  {
-    font-size:64px;
+    font-size: 2em;
+    text-align: right;
 }
-
-.left h2 {
-    display:flex;
-    /* border-top:5px solid var(--heading-color);se */
-    justify-content: flex-end;
-    font-size:36px;
-    font-weight: 300;
-}
-
 
 /* Navigation Stuff */
-nav {
-    /* border: 1px solid black; */
-    display:flex;
-    position:absolute;
-    top:1px;
-    right:5px;
-    list-style-type: none;
+
+/* ADJUST SO IT DOESN"T INTERFER WITH ABOUT */
+nav{
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    border:1px solid var(--background-color);
 }
 
-nav a{
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
     display: block;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    color: var(--heading-color);
-}
+  }
 
-nav a:hover{
+nav li a:hover{
     background-color:var(--main-color);
-}
-
-
-body {
-    font-family:sans-serif;
 }
 
 main {
-    /* border: 1px solid black; */
     background-color:var(--main-color)
 }
 
-section {
-    background-color:var(--main-color);
+#about{
     display:flex;
-    /* justify-content: center; */  
-    margin:2%;
-    /* border: 1px solid black */
 }
 
-.left {
-    /* float:left; */
-    width:20%;
-    border-right:5px solid var(--heading-color);
-    height:inherit;
+#about p{
+    text-align:center;
+    padding:3em;
 }
 
-.right {
-    width:80%;
-    /* border: 1px solid red */
-}
-
-.right>img {
+.avatar {
     position:absolute;
-    width:8%;
-    height:auto;
+    top:1em;
+    left:1em;
     border-radius: 50%;
-    left:25%;
-    top:1%
-    /* border: 1px solid black; */
+    width:7em;
+    z-index: -1;
 }
 
-article{
+h2 {
+    text-align: center;
+    font-size:2em;
+    font-weight: 300;
+    border-bottom: 2px solid var(--heading-color);
+}
+
+#work {
     display:flex;
+    flex-wrap:wrap;
     justify-content: center;
-    align-items: center;
-    height:200px;
+    align-content: center;
+    background-color:var(--main-color);
+    margin: 2em 0 2em 0;
 }
 
-.first-project{
-    display:flex;
-    flex-wrap: wrap;
-    /* border: 4px solid red; */
-    justify-content: center;
+.project-container{
+    position: relative;
+    margin:1em;
+    border:4px solid var(--background-color);
+    height:9em;
+    overflow:hidden;
 }
 
-.first-project img {
-    width:100%;
-    max-width: 850px;
+.feature {
+    color:var(--text-color);
     height:auto;
 }
 
-.first-project img:hover{
-    opacity: .5;
-}
+.photo-label {
+    position: absolute;
+    top: 0;
+    /* background-color: var(--background-color); */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    width: 100%;
+    padding: 2em;
+  }
 
-.project{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding:1%;
-    /* border: 1px solid black; */
-
-}
-
-.project img {
-    width:auto;
-    height:250px;
-    padding:1%;
-}
-
-
-/* .project img:first-child {
-    max-width:100;
-    height:auto;
-} */
-
-.project img:hover{
+.project-container img {
+    max-width:20em;
+    /* height:auto; */
     opacity:.5;
+
+}
+
+.feature img{
+    width:100%;
+    max-width: 60em;
+}
+
+img:hover{
+    opacity: 1;
 }
 
 p {
     color:var(--text-color);
 }
 
-.right p {
-    width:80%;
-    font-weight: 200;
-    /* border:1px solid yellow; */
+#contact{
+    height: 9em;
+    display: flex;
+    justify-content: center;
+}
+
+#contact p {
+    display:inline;
+    text-align: center;
+    padding:2em;
+}
+
+footer{
+    text-align: center;
+    padding:4em;
 }
 
 /* 
@@ -160,4 +180,22 @@ li a {
   display: block;
 */
 
-@media screen ()
+@media screen and (min-width:768px) {
+
+    header,footer {
+        margin:2em;
+    }
+
+    header h1 {
+        text-align:center;
+        font-size:4em;
+    }
+    
+    h2 {
+        text-align: left;
+        font-size:2em;
+        font-weight: 300;
+    }
+
+}
+
