--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,14 @@ body{
     /* border:2px solid yellow; */
 }
 
-header,footer{
-    display:block;
+header{
     margin:3em;
-    text-align: center;
+    text-align: right;
+}
+
+footer{
+    padding:3em;
+    text-align:center;
 }
 
 h1, h2, h3, h5, h6 {
@@ -44,8 +48,6 @@ header h1  {
 }
 
 /* Navigation Stuff */
-
-/* ADJUST SO IT DOESN"T INTERFER WITH ABOUT */
 nav{
     position: -webkit-sticky; /* Safari */
     position: sticky;
@@ -94,7 +96,7 @@ main {
 .avatar {
     position:absolute;
     top:1em;
-    left:1em;
+    left:10%;
     border-radius: 50%;
     width:7em;
     z-index: -1;
@@ -119,27 +121,27 @@ h2 {
 .project-container{
     position: relative;
     margin:1em;
-    border:4px solid var(--background-color);
+    border:5px solid var(--background-color);
     height:9em;
     overflow:hidden;
 }
 
 .feature {
     color:var(--text-color);
-    height:auto;
+    height:auto;   
 }
 
 .photo-label {
     position: absolute;
     top: 0;
     /* background-color: var(--background-color); */
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-    width: 100%;
-    padding: 2em;
+    background: rgba(0, 0, 0, 0.8); 
+    width: 70%;
+    padding: 1em;
   }
 
 .project-container img {
-    max-width:20em;
+    max-width:18em;
     /* height:auto; */
     opacity:.5;
 
@@ -147,7 +149,7 @@ h2 {
 
 .feature img{
     width:100%;
-    max-width: 60em;
+    max-width: 80em;
 }
 
 .project-container:hover img{
@@ -159,15 +161,16 @@ p {
 }
 
 #contact{
-    height: 9em;
+    /* height: 9em; */
     display: flex;
     justify-content: center;
 }
 
-#contact p {
+#contact img {
     display:inline;
-    text-align: center;
-    padding:2em;
+    width:100%;
+    max-width:2em;
+    margin:1em;
 }
 
 /* footer{
@@ -185,38 +188,27 @@ li a {
 
     header,footer {
         margin:2em;
+        margin-left:20em;
     }
 
     header h1 {
-        text-align:center;
         font-size:4em;
+        text-align: center;
     }
-
-    section{
-        }
 
     section>h2 {
         display:inline;
         right:30px;
-        margin-left:11em;
+        margin-left:5em;
         font-size:2em;
         font-weight: 300;
         border-bottom: 0;
-
     }
 
-    #about,#work,#content{
-        margin-left:29em;
-        margin-right:auto;
-        width:50%;
-    
-        /* right:0px; */
-        /* float:right; */
+    #about,#work,#contact{
+        margin-left:20em;
         border-left: 2px solid var(--heading-color);
-    }
-
-    footer{
-        display:block;
+        min-height:5em;
     }
 
 }
