--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     --text-color:#c3cad7;
 }
 
-/* SMOOTH SCROLL OH YEAH */
+/* Smooth scroll for nav buttons */
 html {
     scroll-behavior: smooth;
   }
@@ -77,7 +77,7 @@ ul {
   }
 
 nav li a:hover{
-    background-color:var(--main-color);
+    background-color:var(--background-color);
 }
 
 main {
