--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ body{
     background-color:var(--background-color);
     font-size:16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* border:2px solid yellow; */
 }
 
 header{
@@ -32,22 +31,22 @@ footer{
 h1, h2, h3, h5, h6 {
     color:var(--heading-color);
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
 }
 
+/* h4 is used for the subtext on the photo-label cards */
 h4{
     color:var(--text-color);
     font-weight:100;
     font-size: small;
 }
 
-/* media query this to center or even left */
 header h1  {
     font-size: 2em;
     text-align: right;
 }
 
-/* Navigation Stuff */
+
+/* ======== Navigation definitions ========*/
 nav{
     position: -webkit-sticky; /* Safari */
     position: sticky;
@@ -79,20 +78,21 @@ ul {
 nav li a:hover{
     background-color:var(--background-color);
 }
+/* ======== End navigation definitions ======= */
+
+
 
 main {
     background-color:var(--main-color)
 }
 
-#about{
-    display:flex;
-}
-
+/* About me section styling */
 #about p{
     text-align:center;
     padding:3em;
 }
 
+/* Avatar that is displayed in the header */
 .avatar {
     position:absolute;
     top:1em;
@@ -102,6 +102,7 @@ main {
     z-index: -1;
 }
 
+/* This h2 is utilized on the "side bar" to designate each main section */
 h2 {
     text-align: center;
     font-size:2em;
@@ -118,6 +119,7 @@ h2 {
     margin: 0 0 2em 0;
 }
 
+/* Each project recieves its own container */
 .project-container{
     position: relative;
     margin:1em;
@@ -126,27 +128,28 @@ h2 {
     overflow:hidden;
 }
 
+/* The first project is the Feature Project, and receives special styling */
 .feature {
     color:var(--text-color);
     height:auto;   
 }
 
+/* This is the black box overlay on the project photos */
 .photo-label {
     position: absolute;
     top: 0;
-    /* background-color: var(--background-color); */
     background: rgba(0, 0, 0, 0.8); 
     width: 70%;
     padding: 1em;
   }
 
+/* default project image style */
 .project-container img {
     max-width:18em;
-    /* height:auto; */
     opacity:.5;
-
 }
 
+/* additional style for the Feature Project */
 .feature img{
     width:100%;
     max-width: 80em;
@@ -156,12 +159,12 @@ h2 {
     opacity: 1;
 }
 
+/* currently used only in the About Me section */
 p {
     color:var(--text-color);
 }
 
 #contact{
-    /* height: 9em; */
     display: flex;
     justify-content: center;
 }
@@ -173,17 +176,7 @@ p {
     margin:1em;
 }
 
-/* footer{
-    text-align: center;
-    padding:4em;
-} */
-
-/* 
-@media whatever to do a vertical navbar
-li a {
-  display: block;
-*/
-
+/* Media query to adjust layout for any viewport over 1000px */
 @media screen and (min-width:1000px) {
 
     header,footer {
