trying out flex stuff on nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,8 @@ nav{
 }
 
 ul {
+    display:flex;
+    justify-content: space-around;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -64,7 +66,7 @@ ul {
   }
   
   li {
-    float: left;
+    /* float: left; */
   }
   
   li a {
@@ -178,6 +180,10 @@ p {
 
 /* Media query to adjust layout for any viewport over 1000px */
 @media screen and (min-width:1000px) {
+
+    ul {
+        justify-content: flex-start;
+    }
 
     header,footer {
         margin:2em;
