--- a/css/styles.css
+++ b/css/styles.css
@@ -11725,7 +11725,7 @@ section#contact {
   background-position: center;
 }
 section#contact .section-heading {
-  color: #fff;
+  /* color: #fff; */
 }
 section#contact form#contactForm .form-group {
   margin-bottom: 1.5rem;
